Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26111

OSX: failure to build qtdeclarative due to incomplete QtV8 framework

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.2.0
    • 5.0.0
    • None
    • OS X Lion
      Apple clang version 3.1 (tags/Apple/clang-318.0.58) (based on LLVM 3.1svn)
      Target: x86_64-apple-darwin11.4.0
      Thread model: posix
    • macOS

      Starting from a fresh source tree (git master branch) on OS X Lion with latest Xcode:

      $ cd /path/to/qt
      $ ./configure -prefix $PWD/qtbase -opensource -developer-build
      $ make
      (all steps past this should ideally not be required at all, but that's a different bug!)
      $ cd qtjsbackend
      $ make
      $ find ../qtbase/lib/QtV8.framework/
      ../qtbase/lib/QtV8.framework/
      ../qtbase/lib/QtV8.framework//Contents
      ../qtbase/lib/QtV8.framework//Contents/Info.plist
      ../qtbase/lib/QtV8.framework//QtV8_debug
      ../qtbase/lib/QtV8.framework//QtV8_debug.prl
      ../qtbase/lib/QtV8.framework//Versions
      ../qtbase/lib/QtV8.framework//Versions/5
      ../qtbase/lib/QtV8.framework//Versions/5/QtV8_debug
      ../qtbase/lib/QtV8.framework//Versions/Current

      that's incomplete: it should rather look more like this

      ../qtbase/lib/QtV8.framework
      ../qtbase/lib/QtV8.framework/Contents
      ../qtbase/lib/QtV8.framework/Contents/Info.plist
      ../qtbase/lib/QtV8.framework/Headers
      ../qtbase/lib/QtV8.framework/QtV8
      ../qtbase/lib/QtV8.framework/QtV8.prl
      ../qtbase/lib/QtV8.framework/QtV8_debug
      ../qtbase/lib/QtV8.framework/QtV8_debug.prl
      ../qtbase/lib/QtV8.framework/Versions
      ../qtbase/lib/QtV8.framework/Versions/5
      ../qtbase/lib/QtV8.framework/Versions/5/Headers
      ../qtbase/lib/QtV8.framework/Versions/5/Headers/QtV8
      ../qtbase/lib/QtV8.framework/Versions/5/QtV8
      ../qtbase/lib/QtV8.framework/Versions/5/QtV8_debug
      ../qtbase/lib/QtV8.framework/Versions/Current

      So, if we press on:

      $ cd ../qtdeclarative
      $ make

      eventually we get

      ld: framework not found QtV8

      If we had run configure with the -release option, it works fine, but then it's not possible to build some of the autotests, which is why I wanted to create a developer build. It also works if I do both builds and then supply the missing files from the release version of the QtV8 framework into the developer version:

      $ cd /path/to/qt-dev-version/qtbase
      $ rsync -avu /path/to/qt-release-version/qtbase/lib/QtV8.framework lib/
      $ cd ../qtdeclarative
      $ make

        1. debug.log
          1.41 MB
          Sean Harmer
        For Gerrit Dashboard: QTBUG-26111
        # Subject Branch Project Status CR V

            aalpert Alan Alpert
            srutledg Shawn Rutledge
            Votes:
            3 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes